# pvr.demo

./: .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  local_addon_definitions_repository.patch
debian/: changelog.in  control  copyright  rules
pvr.demo.json/: PVRDemoAddonSettings.json  README.md  addon.xml.in  changelog.txt
pvr.demo.json/resources/language/resource.language.af_za/: strings.po
pvr.demo.json/resources/language/resource.language.am_et/: strings.po
pvr.demo.json/resources/language/resource.language.ar_sa/: strings.po
pvr.demo.json/resources/language/resource.language.az_az/: strings.po
pvr.demo.json/resources/language/resource.language.be_by/: strings.po
pvr.demo.json/resources/language/resource.language.bg_bg/: strings.po
pvr.demo.json/resources/language/resource.language.bs_ba/: strings.po
pvr.demo.json/resources/language/resource.language.ca_es/: strings.po
pvr.demo.json/resources/language/resource.language.cs_cz/: strings.po
pvr.demo.json/resources/language/resource.language.cy_gb/: strings.po
pvr.demo.json/resources/language/resource.language.da_dk/: strings.po
pvr.demo.json/resources/language/resource.language.de_de/: strings.po
pvr.demo.json/resources/language/resource.language.el_gr/: strings.po
pvr.demo.json/resources/language/resource.language.en_au/: strings.po
pvr.demo.json/resources/language/resource.language.en_gb/: strings.po
pvr.demo.json/resources/language/resource.language.en_nz/: strings.po
pvr.demo.json/resources/language/resource.language.en_us/: strings.po
src/: PVRDemo.cpp  PVRDemo.h
(+57 files in other folders)
